--- a/java/src/main/resources/application.properties
+++ b/java/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=java
+
+# H2 Database
+spring.datasource.url=jdbc:h2:mem:bankdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# Disable H2 Console если не нужен
+spring.h2.console.enabled=false
+
+# App
+spring.main.banner-mode=off
