--- a/java/src/main/resources/application.properties
+++ b/java/src/main/resources/application.properties
@@ -1,13 +1,19 @@
-spring.application.name=java
-
-# H2 Database
+# ========== H2 DATABASE ==========
 spring.datasource.url=jdbc:h2:mem:bankdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-# Disable H2 Console если не нужен
-spring.h2.console.enabled=false
+# ========== H2 CONSOLE ==========
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
 
-# App
+# ========== SERVER ==========
+server.port=8080
+server.error.whitelabel.enabled=false
+
+# ========== SPRING ==========
 spring.main.banner-mode=off
+logging.level.org.springframework=INFO
