--- a/java/src/main/resources/application.properties
+++ b/java/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # ========== H2 DATABASE ==========
-spring.datasource.url=jdbc:h2:file:./data/bankdb
+spring.datasource.url=jdbc:h2:mem:bankdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
